# netspeed-cli

./: .apex-state.json  .cliff.toml  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_REPORT.md  Cargo.toml  HOMEBREW_PUBLISHING.md  Justfile  LICENSE  README.md  RELEASE.md  SECURITY.md  build.rs  clippy.toml  commitlint.config.js  config.toml.example  deny.toml  netspeed-cli.1  netspeed-cli.rb  rustfmt.toml  tarpaulin-report.html  tarpaulin-report.json
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-merge.yml  changelog.yml  ci.yml  lockfile-freshness.yml  lockfile.yml  release-readiness.yml  release.yml  security-audit.yml  security-scorecard.yml  stale.yml
.qwen/: settings.json
benches/: baseline.txt  benchmarks.rs  core_benchmarks.rs
completions/: _netspeed-cli  _netspeed-cli.ps1  netspeed-cli.bash  netspeed-cli.elv  netspeed-cli.fish
docs/: architecture.md  branch-protection-setup.md  config-migration.md  security-audit.md
docs/adr/: 001-config-bool-merge-semantics.md
docs/apex/: 00-discover.md  04-canvas-audit-ui-ux.md  04-canvas-audit.md  04.2-cli-ux-audit.md  05-signal-audit.md  06-cipher-audit.md  07-atlas.md  07-drift-audit.md  07.5-api-audit.md  08-ledger.md  09a-forge.md  09b-forge.md  10.5-code-quality-audit.md  13-sentinel-audit.md  14-vault-audit.md  15-guardian-audit.md  16-chronicle.md  audit-report.md  clean-code-octagon.md  refactor-r1-report.md  retrospective-audit-r1.md  retrospective-refactor-r1.md  unified-scorecard.md
fuzz/: Cargo.toml
fuzz/src/: lib.rs
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
scripts/: check-generated-docs.sh  check-release-sync.sh  generate-completions.sh  release.sh  render-homebrew-formula.sh
skills/netspeed-cli/: SKILL.md
src/: bandwidth_loop.rs  bin_errors.rs  cli.rs  common.rs  completions.rs  config.rs  discovery.rs  download.rs  endpoints.rs  error.rs  formatter.rs  geo.rs  grades.rs  history.rs  http.rs  http_client.rs  lib.rs  logging.rs  main.rs  mini.rs  orchestrator.rs  orchestrator_config.rs  output.rs  output_strategy.rs  phase_registry.rs  phase_runner.rs  phases.rs  ping.rs  presentation.rs  presenter.rs  profiles.rs  progress.rs  result_processor.rs  runner.rs  server_fetch.rs  servers.rs  services.rs  share.rs  storage.rs  task_runner.rs  (+8 more)
src/config/: file.rs  mod.rs  output.rs  selection.rs  source.rs  sources.rs  tests.rs  validate.rs
src/domain/: measurement.rs  mod.rs  reporting.rs  server.rs  speedtest.rs
src/formatter/: dashboard.rs  detailed.rs  estimates.rs  formatting.rs  mod.rs  ratings.rs  scenarios.rs  sections.rs  stability.rs
src/formatter/bandwidth_dashboard/: mod.rs  render.rs  scenarios.rs
src/formatter/dashboard/: helpers.rs  mod.rs  render.rs
tests/: async_integration_test.rs  e2e_test.rs  formatter_test.rs  http_integration_test.rs  integration_config_from_source_test.rs  integration_config_validation_test.rs  integration_test.rs  integration_tls_cli_test.rs  integration_upload_fetch_test.rs  mock_network_test.rs  server_test.rs  solidity_tests.rs
