[package]
name = "netspeed-cli"
version = "0.2.2"
edition = "2021"
description = "Command-line interface for testing internet bandwidth using speedtest.net"
license = "MIT"
authors = ["Alexey Ivanov <alexey.ivanov@example.com>"]
repository = "https://github.com/mapleDevJS/netspeed-cli"
homepage = "https://github.com/mapleDevJS/netspeed-cli"
documentation = "https://docs.rs/netspeed-cli"
readme = "README.md"
keywords = ["speedtest", "bandwidth", "network", "internet", "cli"]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.70"

[[bin]]
name = "netspeed-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
md-5 = "0.10"
digest = "0.10"
hex = "0.4"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
